weeks/week-12-network/kubernetes/02-frontend-to-backend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress-from-nginx
  namespace: green-dev-dev
spec:
  podSelector:
    matchLabels:
      app: simple-app
      environment: dev
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
              environment: dev
      ports:
        - protocol: TCP
          port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress-from-nginx
  namespace: green-dev-staging
spec:
  podSelector:
    matchLabels:
      app: simple-app
      environment: staging
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
              environment: staging
      ports:
        - protocol: TCP
          port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress-from-nginx
  namespace: green-dev-prod
spec:
  podSelector:
    matchLabels:
      app: simple-app
      environment: prod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
              environment: prod
      ports:
        - protocol: TCP
          port: 5000
