weeks/week-12-network/kubernetes/04-allow-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
      env: prod
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
